Update styles for studios-carousel and items-carousel to fix layout shift

--- a/src/shared/components/carousels/styles/genericSwiperCarousel.scss
+++ b/src/shared/components/carousels/styles/genericSwiperCarousel.scss
@@ -8,10 +8,10 @@
   min-height: max-content;
   border-radius: 8px;
   position: relative;
-  .studios-carousel {
+  .studios-carousel,
+  .items-carousel {
     min-height: clamp(190px, 234px, 100%);
   }
-
   .swiper_wrap {
     position: relative;
   }
